Fix alignment so buttons aren't offscreen

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3208,7 +3208,7 @@ input, select, textarea {
 			@media screen and (max-width: 1680px) {
 
 				.wrapper > .inner {
-					padding: 4em 4em 2em 4em ;
+					padding: 0em 4em 2em 4em ;
 				}
 
 			}
